<resources>
    <string name="app_name">Мои любимые фильмы</string>
    <string name="more">Подробнее</string>
    <string name="description_ric_and_morty">«Рик и Морти» — американский комедийный научно-фантастический анимационный сериал, созданный Джастином Ройландом и Дэном Хармоном и выпускаемый в рамках блока Adult Swim на телеканале Cartoon Network.</string>
    <string name="description_sounth_park">«Южный Парк» — американский мультсериал, который создают Трей Паркер и Мэтт Стоун. Второй по длительности анимационный сериал в истории американского телевидения после сериала «Симпсоны». Иногда название употребляется в непереведённом виде как «Саут-Парк» или «Саус-Парк».</string>
    <string name="description_nachalo">Кобб — талантливый вор, лучший из лучших в опасном искусстве извлечения: он крадет ценные секреты из глубин подсознания во время сна, когда человеческий разум наиболее уязвим.</string>
    <string name="title_ric_and_morty">Рик и морти</string>
    <string name="title_sounth_park">Южный парк</string>
    <string name="title_nachalo">Начало</string>
    <string name="i_like_it">Мне нравится</string>
    <string name="write_comment">Введите комментарий</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="invite_friend">Пригласить друга</string>
    <string name="add_movie">Добавить фильм</string>
    <string name="title_no_name">Название ещё не придумали :(</string>
    <string name="movie_no_description">Описание тоже ещё нет :(</string>
    <string name="categories_move_action">Боевик</string>
    <string name="categories_move_cartoon">Мультфильм</string>
    <string name="categories_move_cpmedy">Комедия</string>
    <string name="add_favorite">Фильм добавлен в избранные</string>
    <string name="how_do_you_like_my_app">Как тебе мое приложение?</string>
    <string name="question_do_you_want_leave">Желаете выйти?</string>
    <string name="answer_yes">Да</string>
    <string name="answer_no">Нет</string>
</resources>

