<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentMovie">

    <androidx.cardview.widget.CardView
        style="@style/MainCardView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_test_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/title_no_name"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/movie_test_image"
                android:layout_width="410dp"
                android:layout_height="410dp"
                app:srcCompat="@drawable/no_photo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movie_test_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/movie_no_description"

                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/more"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:icon="@drawable/icons_more"
                app:iconSize="16dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</LinearLayout>