<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary">
        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                style="@style/MainCardView">

                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/MainLinearLayoutCompat">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/rick_and_morty_title"
                        style="@style/MainTitleAppCompatTextView"
                        android:text="@string/title_ric_and_morty" />

                    <ImageView
                        android:id="@+id/rick_and_morty_image"
                        style="@style/MainMovieImage"
                        app:srcCompat="@drawable/o283ebd3feb35on61i47j" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/rick_and_morty_description"
                        style="@style/MainDescriptionAppCompatTextView"
                        android:text="@string/description_ric_and_morty" />

                    <com.google.android.material.button.MaterialButton
                        android:onClick="rickAndMortyClick"
                        style="@style/MainMoreButton"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/MainCardView">

                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/MainLinearLayoutCompat">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/south_park_title"
                        style="@style/MainTitleAppCompatTextView"
                        android:text="@string/title_sounth_park" />

                    <ImageView
                        android:id="@+id/south_park_image"
                        style="@style/MainMovieImage"
                        app:srcCompat="@drawable/south_park_min" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/south_park_description"
                        style="@style/MainDescriptionAppCompatTextView"
                        android:text="@string/description_sounth_park" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/MainMoreButton"
                        android:onClick="southParkClick"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/MainCardView">

                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/MainLinearLayoutCompat">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/nachalo_title"
                        style="@style/MainTitleAppCompatTextView"
                        android:text="@string/title_nachalo" />

                    <ImageView
                        android:id="@+id/nachalo_image"
                        style="@style/MainMovieImage"
                        app:srcCompat="@drawable/nachalo" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/nachalo_description"
                        style="@style/MainDescriptionAppCompatTextView"
                        android:text="@string/description_nachalo" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/MainMoreButton"
                        android:onClick="nachaloClick" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                style="@style/MainAddMovieButton" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:clipToPadding="false"
        app:menu="@menu/nav_menu" >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
